# CSCI5607-Assignment2b

./: CMakeLists.txt  README.md
src/: main.cpp  trimesh.hpp
src/core/: Matrix.hpp  Vector3D.hpp
